[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/HealthUi.gd" type="Script" id=1]
[ext_resource path="res://Resources/UI/HeartUIFull.png" type="Texture" id=2]
[ext_resource path="res://Resources/UI/HeartUIEmpty.png" type="Texture" id=3]
[ext_resource path="res://Scenes/ChangeSceneButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Rock_Salt/RockSalt-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fonts/Special_Elite/SpecialElite-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Buttons/Pause_Icon.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Stalinist_One/StalinistOne-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Buttons/Home_Icon.png" type="Texture" id=9]
[ext_resource path="res://Buttons/resume_Icon.png" type="Texture" id=10]
[ext_resource path="res://Buttons/retry_Icon.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 5 )

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUiEmpty" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 64.0
margin_bottom = 16.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUiFull" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 64.0
margin_bottom = 16.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -79.7898
margin_top = 13.3125
margin_right = -15.7898
margin_bottom = 49.3125
custom_fonts/font = SubResource( 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -15.0
margin_top = 1.0
margin_right = 8.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.25 )
texture_normal = ExtResource( 7 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -20.0
color = Color( 0, 0.976471, 1, 0.258824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -60.0
margin_right = 112.0
margin_bottom = -34.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="ColorRect"]
margin_left = 11.4332
margin_top = 45.6863
margin_right = 96.4332
margin_bottom = 81.6863
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Resume"
icon = ExtResource( 10 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" parent="ColorRect" instance=ExtResource( 4 )]
margin_left = 137.161
margin_top = 46.4436
margin_right = 214.161
margin_bottom = 82.4436
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Retry"
icon = ExtResource( 11 )
expand_icon = true

[node name="Main Menu" parent="ColorRect" instance=ExtResource( 4 )]
margin_left = 57.8995
margin_top = 88.9393
margin_right = 172.899
margin_bottom = 124.939
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Main Menu"
icon = ExtResource( 9 )
expand_icon = true
scene = "res://Scenes/Main.tscn"
[connection signal="button_up" from="PauseButton" to="." method="_on_PauseButton_button_up"]
[connection signal="button_up" from="ColorRect/Resume" to="." method="_on_Resume_button_up"]
